# epicchain-contracts-rs

./: Cargo.toml  LICENSE  Makefile  README.md  fix_cargo_profiles.sh  netlify.toml  validate_all_examples.sh
docs/: CHANGELOG.md  (+14 more)
epicchain-contract/: Cargo.toml  Makefile.include
epicchain-contract-proc-macros/: Cargo.toml
epicchain-contract-proc-macros/src/: contract.rs  lib.rs  structs.rs
epicchain-contract/src/: lib.rs  smart_contract.rs
epicchain-contract/src/contract/: event.rs  mod.rs  token.rs  xep.rs  xep11.rs  xep17.rs
epicchain-contract/src/contract/native/: epicchain.rs  epicpulse.rs  legder.rs  mod.rs  oracle.rs  policy.rs
epicchain-contract/src/crypto/: hash.rs  mod.rs
epicchain-contract/src/env/: asm.rs  contract.rs  crypto.rs  extension.rs  mod.rs  native.rs  numeric.rs  stdlib.rs  syscall.rs
epicchain-contract/src/event/: mod.rs
epicchain-contract/src/macros/: mod.rs  safe.rs
epicchain-contract/src/native/: contract.rs  contract_management.rs  epicchain.rs  epicpulse.rs  essentiallib.rs  mod.rs
epicchain-contract/src/runtime/: assert.rs  mod.rs
epicchain-contract/src/serialize/: deserialize.rs  mod.rs  neo_serializable.rs  serialize.rs
epicchain-contract/src/services/: contract.rs  crypto.rs  event.rs  iterator.rs  mod.rs  runtime.rs  storage.rs
epicchain-contract/src/storage/: item.rs  map.rs  mod.rs
epicchain-contract/src/types/: block.rs  consts.rs  contract.rs  epicchain.rs  key.rs  mod.rs  notification.rs  placeholder.rs  signer.rs  storage.rs  tx.rs
epicchain-contract/tests/: advanced_types_tests.rs  annotation_tests.rs  contract_attributes_tests.rs  integration_tests.rs  mock_env.rs  serialization_tests.rs  services_tests.rs  storage_tests.rs  types_tests.rs
(+64 files in other folders)
