# Copyright @ 2024 - present, R3E Network
# All Rights Reserved

[package]
name = "epicchain-contract-proc-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1" }
syn         = { version = "2", features = ["full"] }
quote       = { version = "1" }
